--- a/application/templates/plan/edit.html
+++ b/application/templates/plan/edit.html
@@ -5,7 +5,7 @@
 {%- set plan = development_plan -%}
 
 <span class="govuk-caption-xl">Development plans</span>
-<h1 class="govuk-heading-xl">Edit plan: {{ plan.reference }}</h1>
+<h1 class="govuk-heading-xl">Edit plan record: {{ plan.reference }}</h1>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
