--- a/application/templates/plan/add-document.html
+++ b/application/templates/plan/add-document.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <span class="govuk-caption-xl">Development plan: {{ development_plan.reference }}</span>
-<h1 class="govuk-heading-xl">Add document to timetable</h1>
+<h1 class="govuk-heading-xl">Add supporting document</h1>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -43,7 +43,7 @@
         {% endif %}
       {% endfor %}
       <div class="govuk-button-group">
-        <button class="govuk-button" type="submit">Create record</button>
+        <button class="govuk-button" type="submit">Create document record</button>
         <a class="govuk-link" href="{{ url_for('development_plan.plan', reference=development_plan.reference) }}">Cancel</a>
       </div>
     </form>
