--- a/application/templates/plan/add-event.html
+++ b/application/templates/plan/add-event.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <span class="govuk-caption-xl">Development plan: {{ development_plan.reference }}</span>
-<h1 class="govuk-heading-xl">Add event to timetable</h1>
+<h1 class="govuk-heading-xl">Add event record</h1>
 
-<p class="govuk-body">You are adding an event to the <span class="govuk-!-font-weight-bold">{{ development_plan.name }}</span> timetable.</p>
+<p class="govuk-body">You are adding an event to the <span class="govuk-!-font-weight-bold">{{ development_plan.name }}</span> event log.</p>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
