--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -79,8 +79,9 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h2 id="timetable" class="govuk-heading-m govuk-!-margin-top-9">Timetable</h2>
-      <p class="govuk-body">The timetable is a collection of events that happen during the plan making process. Events in the timetable might already have happened or might happen on a future date.</p>
+      <h2 id="timetable" class="govuk-heading-m govuk-!-margin-top-9">Event log</h2>
+      <p class="govuk-body">This data should be a collection of events that happen during the plan-making process. Event records may have already happened or might happen on a future date.</p>
+      <p class="govuk-body">This data can be used to create a timetable for the plan.</p>
     </div>
   </div>
 
@@ -114,12 +115,12 @@
     </tbody>
   </table>
 
-  <a href="{{ url_for('development_plan.add_event', reference=plan.reference) }}" class="govuk-button govuk-button--secondary">+ add event to timetable</a>
+  <a href="{{ url_for('development_plan.add_event', reference=plan.reference) }}" class="govuk-button govuk-button--secondary">+ add event</a>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h2 id="documents" class="govuk-heading-m govuk-!-margin-top-9">Documents</h2>
-      <p class="govuk-body">Record any associated documents. These can be documents that contain relevant policies, documents outlining activities or publication notices.</p>
+      <h2 id="documents" class="govuk-heading-m govuk-!-margin-top-9">Supporting documents</h2>
+      <p class="govuk-body">Record any supporting documents. These can be documents that contain relevant policies, documents outlining activities or publication notices.</p>
     </div>
   </div>
 
