--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -7358,6 +7358,27 @@
 .app-hidden {
   display: none; }
 
+.app-govuk-text {
+  font-family: "GDS Transport", arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 1.25; }
+  @media print {
+    .app-govuk-text {
+      font-family: sans-serif; } }
+  @media (min-width: 40.0625em) {
+    .app-govuk-text {
+      font-size: 19px;
+      font-size: 1.1875rem;
+      line-height: 1.31579; } }
+  @media print {
+    .app-govuk-text {
+      font-size: 14pt;
+      line-height: 1.15; } }
+
 .app-plan-reference {
   color: #505a5f; }
 
