--- a/application/templates/plan/edit.html
+++ b/application/templates/plan/edit.html
@@ -18,7 +18,7 @@
       </div>
 
       {% for field in form %}
-      {%- if field.name not in ['reference'] %}
+      {%- if field.name not in ['reference', 'period_start_date', 'period_end_date'] %}
         {%- if field.name == 'organisations' %}
           <div class="app-organisation-select" data-module="multi-select">
             <div class="govuk-form-group" data-mulit-select="form-group">
@@ -42,16 +42,23 @@
           {{ field(class='govuk-input') }}
           {% endif %}
           {% if field.errors %}
-              <ul>
-              {% for error in field.errors %}
-                  <li>{{ error }}</li>
-              {% endfor %}
-              </ul>
+            <ul>
+            {% for error in field.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
           {% endif %}
         </div>
-        {% endif %}
+        {% endif %}{# end if organisation field #}
       {% endif -%}
       {% endfor %}
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="period_date">Period covered by plan</label>
+        <div class="govuk-hint">For example, 2016 to 2033</div>
+        <input class="govuk-input govuk-input--width-4" id="period_start_date" name="period_start_date" required="" type="text" value="{{ form.period_start_date.data if form.period_start_date.data }}">
+        <span class="app-govuk-text">to</span>
+        <input class="govuk-input govuk-input--width-4" id="period_end_date" name="period_end_date" required="" type="text" value="{{ form.period_end_date.data if form.period_end_date.data }}">
+      </div>
       <div class="govuk-button-group">
         <button class="govuk-button" type="submit">Edit record</button>
         <a class="govuk-link" href="{{ url_for('development_plan.plan', reference=plan.reference) }}">Cancel</a>
