--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -13,6 +13,10 @@
 
 // Typography tweaks
 
+.app-govuk-text {
+  @include govuk-font(19);
+}
+
 .app-plan-reference {
   color: $govuk-secondary-text-colour;
 }
