--- a/application/templates/plan/new.html
+++ b/application/templates/plan/new.html
@@ -10,7 +10,7 @@
     <form class="govuk-form" method="POST">
       {{ form.csrf_token }}
       {% for field in form %}
-        {% if field.name not in ['period_start_date', 'period_end_date'] %}
+        {% if field.name not in ['development_plan_type', 'period_start_date', 'period_end_date'] %}
         {%- if field.name == 'organisations' %}
         <div class="app-organisation-select" data-module="multi-select">
           <div class="govuk-form-group" data-mulit-select="form-group">
@@ -49,6 +49,26 @@
         {% endif -%}{# end of if organisation #}
         {% endif -%}{# end if not period dates #}
       {% endfor %}
+      <div class="govuk-form-group">
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend">
+              Plan type
+            </legend>
+            <div class="govuk-radios govuk-radios--small" data-module="govuk-radios">
+              {% for choice in form.development_plan_type.choices %}
+              <div class="govuk-radios__item">
+                {%- set radioID = "development_plan_type" + ('-'+loop.index|string) if loop.index %}
+                <input class="govuk-radios__input" id="{{ radioID }}" name="development_plan_type" type="radio" value="{{ choice[0] }}"{% if form.development_plan_type.data == choice[0] %} checked{% endif %}>
+                <label class="govuk-label govuk-radios__label" for="{{ radioID }}">
+                  {{ choice[1] }}
+                </label>
+              </div>
+              {% endfor %}
+            </div>
+          </fieldset>
+        </div>
+      </div>
       <div class="govuk-form-group">
         <label class="govuk-label" for="period_date">Period covered by plan</label>
         <div class="govuk-hint">For example, 2016 to 2033</div>
