--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-xl">Development plan timetable prototype</h1>
+    <h1 class="govuk-heading-xl">Development plan data collector</h1>
 
-    <p class="govuk-body">This prototype allows you to create data that meets the <a href="" class="govuk-link">development plan data standard</a>. It allows you to record as data all the different development plans a local planning authority makes, including local plans and neighbourhood plans.</p>
+    <p class="govuk-body">This prototype allows you to create data that meets the <a href="https://digital-land.github.io/specification/specification/development-plan/" class="govuk-link">development plan data standard</a>. It allows you to record as data all the different development plans a local planning authority makes, including local plans and neighbourhood plans.</p>
     <p class="govuk-body">For each plan you can capture the events that happen and any documents that are produced during the plan-making process.</p>
 
     <details class="govuk-details" data-module="govuk-details">
