--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -13,7 +13,7 @@
         <a href="/" class="govuk-header__link govuk-header__link--service-name">
           Data Standards
           <span class="govuk-header__product-name">
-            Development plan timetable
+            Development plan data collector
           </span>
         </a>
         <strong class="govuk-tag govuk-phase-banner__content__tag app-header__tag">
