--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -16,13 +16,26 @@
             Development plan data collector
           </span>
         </a>
-        <strong class="govuk-tag govuk-phase-banner__content__tag app-header__tag">
-          prototype
-        </strong>
+        <!--<strong class="govuk-tag govuk-phase-banner__content__tag app-header__tag">
+          research tool
+        </strong>-->
     </div>
   </div>
 </header>
 {% endblock mastHead %}
+
+{% block beforeContent %}
+<div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      research tool
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a research tool. Your <a class="govuk-link" href="mailto:digitalland@levellingup.gov.uk?subject=Prototype feedback">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
+{% endblock beforeContent %}
 
 {% block content %}
   <h1 class="govuk-heading-xl">{{ title|default('Index') }}</h1>
