add link to find organisation code

--- a/application/templates/organisation/index.html
+++ b/application/templates/organisation/index.html
@@ -9,10 +9,11 @@
     <div class="govuk-grid-column-two-thirds">
     <form class="govuk-form">
       <div class="govuk-form-group">
-        <label for="organisation" class="govuk-label">Local authority code</label>
+        <label for="organisation" class="govuk-label">Local authority reference</label>
         <div class="govuk-hint">For example, BAB for Babergh</div>
         <input type="text" class="govuk-input" name="organisation">
       </div>
+      <p class="govuk-body"><a href="https://digital-land.github.io/organisation/" class="govuk-link">Find authority reference</a></p>
       <div class="govuk-form-group">
         <button class="govuk-button">Find</button>
       </div>
