add download link to index page

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -43,4 +43,13 @@
     <p class="govuk-body"><a href="{{ url_for('admin.index') }}" class="govuk-link">Manage the supporting data registers</a>.</p>
   </div>
 </div>
+
+<hr class="govuk-section-break--l">
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-three-quarters">
+    <h2 class="govuk-heading-m">Download</h2>
+    <p class="govuk-body"><a href="{{ url_for('development_plan.download') }}" class="govuk-link">Download a zip file of the data collected</a>.</p>
+  </div>
+</div>
 {% endblock content %}
