Add form error if user forgets http or https off plan documentation url

--- a/application/templates/plan/new.html
+++ b/application/templates/plan/new.html
@@ -26,24 +26,24 @@
           </div>
         </div>
         {% else %}
-        <div class="govuk-form-group">
+        <div class="govuk-form-group{{ ' govuk-form-group--error' if field.errors }}">
           {{ field.label(class='govuk-label') }}
           {% if field.description %}
             <div class="govuk-hint">{{ field.description }}</div>
           {% endif %}
+          {% if field.errors -%}
+          <p id="{{ field.name }}-error" class="govuk-error-message">
+            {% for error in field.errors %}
+            <span class="govuk-visually-hidden">Error:</span> {{ error }}
+            {% endfor %}
+          </p>
+          {%- endif %}{# end if errors #}
           {% set extra_classes = " govuk-input--width-4" if "date" in field.name else "" %}
           {% if field.type == "TextAreaField" %}
           {{ field(class='govuk-textarea') }}
           {% else %}
           {% set classes = 'govuk-input' + extra_classes %}
           {{ field(class=classes) }}
-          {%- endif %}
-          {% if field.errors -%}
-            <ul>
-            {% for error in field.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-            </ul>
           {%- endif %}
         </div>
         {% endif -%}{# end of if organisation #}
