--- a/application/static/stylesheets/application.css
+++ b/application/static/stylesheets/application.css
@@ -7418,3 +7418,11 @@
   .app-cell--meta ~ .app-cell--actions {
     padding-left: 15px;
     border-left: 1px solid #b1b4b6; }
+
+.app-document-list > .app-document-list__item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px; }
+
+.app-document-list .app-document-list__item__actions {
+  align-self: center; }
