Re-introduce notes field to plan forms

--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -1,4 +1,5 @@
 {% extends 'digital-land-frontend/layouts/base.jinja' %}
+{% from 'macros/notes-field.html' import notesField %}
 
 {% block stylesheets %}
   <link rel="stylesheet" href="/static/stylesheets/application.css">
