--- a/application/templates/plan/new.html
+++ b/application/templates/plan/new.html
@@ -76,6 +76,9 @@
         <span class="app-govuk-text">to</span>
         <input class="govuk-input govuk-input--width-4" id="period_end_date" name="period_end_date" type="text" value="{{ form.period_end_date.data if form.period_end_date.data }}">
       </div>
+
+      {{ notesField({ "form": form })}}
+
       <div class="govuk-button-group">
         <button class="govuk-button" type="submit">Create plan record</button>
         <a class="govuk-link" href="{{ url_for('base.index') }}">Cancel</a>
