--- a/application/templates/plan/add-document.html
+++ b/application/templates/plan/add-document.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         {% else %}
-        {%- if field.name != 'csrf_token' %}
+        {%- if field.name not in ['csrf_token', 'notes'] %}
         <div class="govuk-form-group{{ ' govuk-form-group--error' if field.errors }}">
           {{ field.label(class='govuk-label') }}
           {% if field.description %}
@@ -68,6 +68,9 @@
         {% endif %}{# end if not csrf_token #}
         {% endif %}
       {% endfor %}
+
+      {{ notesField({ "form": form })}}
+
       <div class="govuk-button-group">
         <button class="govuk-button" type="submit">Create document record</button>
         <a class="govuk-link" href="{{ url_for('development_plan.plan', reference=development_plan.reference) }}">Cancel</a>
