--- a/application/templates/plan/add-event.html
+++ b/application/templates/plan/add-event.html
@@ -93,6 +93,9 @@
           </div>
         </fieldset>
       </div>
+
+      {{ notesField({ "form": form })}}
+
       <div class="govuk-button-group">
         <button class="govuk-button" type="submit">Create record</button>
         <a class="govuk-link" href="{{ url_for('development_plan.plan', reference=development_plan.reference) }}">Cancel</a>
