Link to dataset editor versions of supporting datasets

--- a/application/templates/admin/index.html
+++ b/application/templates/admin/index.html
@@ -3,13 +3,14 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-xl">Admin</h1>
+    <h1 class="govuk-heading-xl">Supporting datasets</h1>
 
-    <p class="govuk-body">3 registers support the development plan standard</p>
+    <p class="govuk-body">4 datasets managed by DLUHC support the <a href="https://digital-land.github.io/specification/specification/development-plan/" class="govuk-link">development plan standard</a></p>
     <ul class="govuk-list govuk-list--bullet">
-      <li><a href="{{ url_for('admin.document_types') }}" class="govuk-link">Document types</a></li>
-      <li><a href="{{ url_for('admin.events') }}" class="govuk-link">Events</a></li>
-      <li><a href="{{ url_for('admin.plan_types') }}" class="govuk-link">Plan types</a></li>
+      <li>Development plan <a href="" class="govuk-link">document types</a></li>
+      <li>Development plan <a href="https://dluhc-datasets.planning-data.dev/dataset/development-plan-event" class="govuk-link">events</a></li>
+      <li>Development plan <a href="https://dluhc-datasets.planning-data.dev/dataset/development-plan-geography-type" class="govuk-link">geography types</a></li>
+      <li>Development <a href="https://dluhc-datasets.planning-data.dev/dataset/development-plan-type" class="govuk-link">plan types</a></li>
     </ul>
 
 
