--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -39,8 +39,8 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h2 class="govuk-heading-m">Admin</h2>
-    <p class="govuk-body"><a href="{{ url_for('admin.index') }}" class="govuk-link">Manage the supporting data registers</a>.</p>
+    <h2 class="govuk-heading-m">Supporting data</h2>
+    <p class="govuk-body"><a href="{{ url_for('admin.index') }}" class="govuk-link">View the supporting datasets</a>.</p>
   </div>
 </div>
 
