--- a/application/templates/organisation/index.html
+++ b/application/templates/organisation/index.html
@@ -27,7 +27,7 @@
 
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ organisation.name }}</h3>
+        <h3 class="govuk-heading-s govuk-!-margin-bottom-0"><a href="{{ url_for('organisation.organisation', reference=organisation.organisation)}}" class="govuk-link govuk-link--text-colour">{{ organisation.name }}</a></h3>
         <span class="govuk-hint govuk-!-font-size-16">{{ organisation.organisation }}</span>
       </dt>
       <dd class="govuk-summary-list__value">
