--- a/application/templates/plan/edit.html
+++ b/application/templates/plan/edit.html
@@ -18,7 +18,8 @@
       </div>
 
       {% for field in form %}
-      {%- if field.name not in ['reference', 'period_start_date', 'period_end_date', 'development_plan_type', 'csrf_token'] %}
+      {# the fields listed are either not shown or handled individually #}
+      {%- if field.name not in ['reference', 'period_start_date', 'period_end_date', 'development_plan_type', 'csrf_token', 'notes'] %}
         {%- if field.name == 'organisations' %}
           <div class="app-organisation-select" data-module="multi-select">
             <div class="govuk-form-group" data-mulit-select="form-group">
