--- a/application/templates/plan/new.html
+++ b/application/templates/plan/new.html
@@ -10,7 +10,8 @@
     <form class="govuk-form" method="POST">
       {{ form.hidden_tag() }}
       {% for field in form %}
-        {% if field.name not in ['development_plan_type', 'period_start_date', 'period_end_date', 'csrf_token'] %}
+        {# the fields listed are either not shown or handled individually #}
+        {% if field.name not in ['development_plan_type', 'period_start_date', 'period_end_date', 'csrf_token', 'notes'] %}
         {%- if field.name == 'organisations' %}
         <div class="app-organisation-select" data-module="multi-select">
           <div class="govuk-form-group" data-mulit-select="form-group">
