--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -27,7 +27,7 @@
       {% endfor %}
     </ul>
 
-    <a href="{{ url_for('development_plan.new') }}" class="govuk-button govuk-button--secondary">+ add new plan record</a>
+    <a href="{{ url_for('development_plan.new') }}" class="govuk-button govuk-button--secondary"><span class="govuk-!-margin-right-2">✚</span>Add new plan record</a>
     <p class="govuk-body">or</p>
     <p class="govuk-body">
       <a href="{{ url_for('organisation.organisations') }}" class="govuk-link">Find by organisation</a>
