changes fontsize for reference

--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -4,7 +4,7 @@
 {% block content %}
 
   <span class="govuk-caption-xl">Development plan</span>
-  <h1 class="govuk-heading-xl">{{development_plan.name}} <span class="app-plan-reference">({{development_plan.reference}})</span></h1>
+  <h1 class="govuk-heading-xl">{{development_plan.name}} <span class="app-plan-reference govuk-!-font-size-27">({{development_plan.reference}})</span></h1>
 
 
   <div class="govuk-grid-row">
