--- a/application/templates/plan/edit.html
+++ b/application/templates/plan/edit.html
@@ -19,7 +19,7 @@
 
       {% for field in form %}
       {# the fields listed are either not shown or handled individually #}
-      {%- if field.name not in ['reference', 'period_start_date', 'period_end_date', 'development_plan_type', 'csrf_token', 'notes'] %}
+      {%- if field.name not in ['reference', 'period_start_date', 'period_end_date', 'development_plan_type', 'csrf_token', 'notes', 'adopted_date_year', 'adopted_date_month', 'adopted_date_day'] %}
         {%- if field.name == 'organisations' %}
           <div class="app-organisation-select" data-module="multi-select">
             <div class="govuk-form-group" data-mulit-select="form-group">
@@ -79,6 +79,43 @@
         <input class="govuk-input govuk-input--width-4" id="period_start_date" name="period_start_date" required="" type="text" value="{{ form.period_start_date.data if form.period_start_date.data }}">
         <span class="app-govuk-text">to</span>
         <input class="govuk-input govuk-input--width-4" id="period_end_date" name="period_end_date" required="" type="text" value="{{ form.period_end_date.data if form.period_end_date.data }}">
+      </div>
+
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset" role="group" aria-describedby="adopted-date-hint">
+          <legend class="govuk-fieldset__legend">
+              Adopted date
+          </legend>
+          <div id="adopted-date-hint" class="govuk-hint">
+            For example, 27 03 2014
+          </div>
+          <div class="govuk-date-input" id="adopted-date">
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="adopted_date_day">
+                  Day
+                </label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="adopted_date_day" name="adopted_date_day" type="text" inputmode="numeric" {% if plan.adopted_date %}value="{{ plan.adopted_date|date_part('DD')}}"{% endif %}>
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="adopted_date_month">
+                  Month
+                </label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="adopted_date_month" name="adopted_date_month" type="text" inputmode="numeric" {% if plan.adopted_date %}value="{{ plan.adopted_date|date_part('MM')}}"{% endif %}>
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="adopted_date_year">
+                  Year
+                </label>
+                <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="adopted_date_year" name="adopted_date_year" type="text" inputmode="numeric" {% if plan.adopted_date %}value="{{ plan.adopted_date|date_part('YYYY')}}"{% endif %}>
+              </div>
+            </div>
+          </div>
+        </fieldset>
       </div>
 
       {{ notesField({ "form": form })}}
