--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,6 +3,17 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
+
+    <section class="app-progress-banner">
+      <div class="app-progress__bar" style="--progress-bar-target: {{ organisations|length }}; --progress-bar-progress: {{ adopted_plans|length }};">
+        <p class="govuk-visually-hidden">We expect to collect adopted local plans from {{ organisations|length }} planning authorities</p>
+        <span class="app-progress__bar__completed">
+          <p class="govuk-visually-hidden">So far we have collected {{ adopted_plans|length }}</p>
+        </span>
+      </div>
+      <p class="govuk-body">{{ adopted_plans|length }} of {{ organisations|length }} adopted local plans {{ 'has' if adopted_plans|length == 1 else 'have' }} been collected</p>
+    </section>
+
     <h1 class="govuk-heading-xl">Development plan data collector</h1>
 
     <p class="govuk-body">This prototype allows you to create data that meets the <a href="https://digital-land.github.io/specification/specification/development-plan/" class="govuk-link">development plan data standard</a>. It allows you to record as data all the different development plans a local planning authority makes, including local plans and neighbourhood plans.</p>
@@ -32,6 +43,7 @@
     <p class="govuk-body">
       <a href="{{ url_for('organisation.organisations') }}" class="govuk-link">Find by organisation</a>
     </p>
+
   </div>
 </div>
 
