--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -6,6 +6,7 @@
 @import "components/register-table";
 @import "components/new-register-record";
 @import "components/multi-select";
+@import "components/progress-banner";
 
 .app-hidden {
   display: none
