add sort to event dates

--- a/application/templates/admin/events.html
+++ b/application/templates/admin/events.html
@@ -21,15 +21,15 @@
     <span class="govuk-caption-xl">Development plan data register</span>
     <h1 class="govuk-heading-xl">Events</h1>
 
-    <table class="dl-data-table app-register-table">
+    <table class="dl-data-table app-register-table app-table--sortable">
       <thead>
         <tr>
           <th>Reference</th>
           <th>Name</th>
           <th>Description</th>
-          <th>Entry date</th>
-          <th>Start date</th>
-          <th>End date</th>
+          <th data-sort="none">Entry date</th>
+          <th data-sort="none">Start date</th>
+          <th data-sort="none">End date</th>
         </tr>
       </thead>
       <tbody>
