--- a/application/templates/plan/plan.html
+++ b/application/templates/plan/plan.html
@@ -112,9 +112,9 @@
   <table class="govuk-table app-timetable app-table--sortable">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header" data-sort="none">Event</th>
+        <th scope="col" class="govuk-table__header">Event</th>
         <th scope="col" class="govuk-table__header" data-sort="none">Event date</th>
-        <th scope="col" class="govuk-table__header" data-sort="none">Organisation</th>
+        <th scope="col" class="govuk-table__header">Organisation</th>
         <th scope="col" class="govuk-table__header app-cell--meta" data-sort="none">Entered</th>
         <th scope="col" class="govuk-table__header app-cell--meta" data-sort="none">Ended</th>
         <th scope="col" class="govuk-table__header app-cell--meta app-cell--actions"></th>
